test/integration/httproute/manifests/backends/1_route_filter_ko_all_rules_invalid/route-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo-1
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "example.haproxy"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /route1
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: new1.haproxy
    backendRefs:
    - name: http-echo-1
      port: 80
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
  - matches:
    - path:
        type: PathPrefix
        value: /route2
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: new2.haproxy
    backendRefs:
    - name: http-echo-1
      port: 80
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
